[project]
name = "webstack-django-endless-pagination"
version = "3.1.0"
description = "Lazy pagination for Django with optional infinite-scroll JavaScript"
authors = [
    { name = "Francesco Banconi", email = "francesco.banconi@gmail.com" },
]
maintainers = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = ["Django>=3.0, <7.0"]
readme = "README.md"
requires-python = ">= 3.6"
license = "MIT"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ["django", "pagination"]

[project.urls]
repository = "http://github.com/webstack/django-endless-pagination.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/endless_pagination"]
