[project]
name = "tests"
version = "0.1.0"
description = "Django project to test the library"
authors = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = [
    "django>=5.1",
    "coverage==7.6.1",
    "django",
    "django-nose==1.4.7",
    "ipdb==0.13.13",
    "nose==1.3.7",
    "selenium==4.23.1",
    "sphinx==8.0.2",
    "xvfbwrapper==0.2.9",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
