[project]
name = "tests"
version = "0.1.0"
description = "Django project to test the library"
authors = [
    { name = "Stéphane Raimbault", email = "stephane.raimbault@webstack.fr" },
]
dependencies = ["Django>=5.1"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
